--- a/force-app/main/default/classes/EventHandler.cls
+++ b/force-app/main/default/classes/EventHandler.cls
@@ -1,3 +1,6 @@
 public with sharing class EventHandler {
 
+    public static void createEvents(List<Adventure_Park__c> newList, Map<Id, Adventure_Park__c> newmap, Map<Id, Adventure_Park__c> oldmap) {
+
+    }
 }
